--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
         referrerpolicy="no-referrer"
         />
         <link rel="stylesheet" href="./css/main.css" />
+        <script src="./js/main.js"></script>
     </head>
     <body>
         <load src="./partials/header.html" />
@@ -29,6 +30,6 @@
           <load src="./partials/feedback.html" />
       </main>
         <load src="./partials/footer.html" />
-        <load src="./partials/menu.html" />
+        <load src="./partials/mobile-menu.html" />
     </body>
 </html>
