--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,6 @@
         referrerpolicy="no-referrer"
         />
         <link rel="stylesheet" href="./css/main.css" />
-        <script type="module" crossorigin src="./js/main.js"></script>
     </head>
     <body>
         <load src="./partials/header.html" />
@@ -31,5 +30,6 @@
       </main>
         <load src="./partials/footer.html" />
         <load src="./partials/mobile-menu.html" />
+        <script type="module" src="./js/main.js"></script>
     </body>
 </html>
