--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
         referrerpolicy="no-referrer"
         />
         <link rel="stylesheet" href="./css/main.css" />
+        <script type="module" src="./public/main.js"></script>
     </head>
     <body>
         <load src="./partials/header.html" />
@@ -30,6 +31,5 @@
       </main>
         <load src="./partials/footer.html" />
         <load src="./partials/mobile-menu.html" />
-        <script type="module" src="./js/main.js"></script>
     </body>
 </html>
