--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         referrerpolicy="no-referrer"
         />
         <link rel="stylesheet" href="./css/main.css" />
-        <script type="module" src="./public/main.js"></script>
+        <script src="./main.js"></script>
     </head>
     <body>
         <load src="./partials/header.html" />
